--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject", 
+    "eject": "react-scripts eject",
     "lint": "eslint --color . --ext .ts,.mjs,.js --cache",
     "lint-fix": "eslint --color . --ext .ts,.mjs,.js --cache --fix"
   },
   "dependencies": {
+    "centrifuge": "^5.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
